# minicircuit-api

./: .bacon-locations  Cargo.toml
minicircuit/: Cargo.toml
minicircuit/commands/: Cargo.toml
minicircuit/commands/src/: command.rs  lib.rs  prelude.rs  properties.rs  response.rs
minicircuit/commands/src/basic/: adc.rs  current.rs  forward_reflected.rs  frequency.rs  output.rs  phase.rs  setpoint.rs  temperature.rs  voltage.rs
minicircuit/commands/src/data_types/: types.rs
minicircuit/commands/src/dll/: config.rs  enable.rs  sweep.rs
minicircuit/commands/src/error/: clear_errors.rs  mod.rs  pa.rs  status.rs
minicircuit/commands/src/information/: identity.rs  isc_temp.rs  mod.rs  uptime.rs  version.rs
minicircuit/commands/src/manual/: attenuation.rs  auto_gain.rs  magnitude.rs  power.rs
minicircuit/commands/src/pwm/: duty_cycle.rs  frequency.rs  timed_rf.rs
minicircuit/commands/src/soa/: config.rs  current.rs  dissipation.rs  forward_power.rs  grace_timer.rs  mod.rs  reflected_power.rs  (+3 more)
minicircuit/driver/: Cargo.toml
minicircuit/driver/src/: communication.rs  connection.rs  driver.rs  lib.rs  properties.rs
minicircuit/simulate/: Cargo.toml  README.md
minicircuit/simulate/examples/: simulate_device.rs
minicircuit/simulate/src/: main.rs  simulator.rs
minicircuit/src/: lib.rs
minicircuit/src/commands/: channel_id.rs  clear_errors.rs  clock_source.rs  command.rs  commands.rs  dll_mode.rs  frequency.rs  identity.rs  iq_magnitude.rs  isc_power.rs  isc_temp.rs  mod.rs  pa_power.rs  pa_temp.rs  phase.rs  pwm.rs  response.rs  rf_output.rs  soa.rs  status.rs  sweep.rs  system_reset.rs  uptime.rs  version.rs  vga_attenuation.rs
minicircuit/src/drivers/: communication.rs  connection.rs  for_later_use.rs  minicircuit_driver.rs  mod.rs  properties.rs
minicircuit/src/errors/: errors.rs
(+68 files in other folders)
