[package]
name = "minicircuit"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport = { version = "4.7.0", default-features = false, features = [
    "serde",
] }
tokio = { version = "1", features = ["full"], optional = false}
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
int-enum = "1.1.2"

# [features]
# default = ["driver"]
# logging = []
# driver = ["dep:tokio"]
