[package]
name = "minicircuit-simulate"
version = "0.1.0"
edition = "2021"

[dependencies]
minicircuit_commands = { path = "../commands" }
minicircuit_driver = { path = "../driver" }
serialport = "4.2.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "minicircuit-simulator"
path = "src/main.rs"
